--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,17 @@
 
 /* Your CSS Code here. */
+.joinBtn {
+    width: 10em;
+    height: 5ex;
+    background-color: black;
+    border: 2px solid firebrick;
+    border-radius: 5px;
+    font-weight: bold;
+    color: white;
+    cursor: pointer;
+}
+
+.joinBtn:hover {
+    background-color: yellow;
+	color:black;
+}
