--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
     width: 10em;
     height: 5ex;
     background-color: black;
-    border: 2px solid firebrick;
+    border: none;
     border-radius: 5px;
     font-weight: bold;
     color: white;
